# AdventureClemGame

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_ROADMAP.md  CONFIG_ARCHITECTURE_ANALYSIS.md  CONTRIBUTING.md  MIGRATION_HARDCODE_TO_CONFIG.md  PHASE4_SUMMARY.md  PHASE_2_2_REFACTOR_LARGE_FUNCTIONS.md  PHASE_2_3_PRINT_STATEMENT_REPLACEMENT.md  PHASE_3_COMPLETION_SUMMARY.md  README.md  adventuregame_eval.ipynb  adventuregame_eval_1.ipynb  adventuregame_eval_2.ipynb  adventuregame_eval_2_2.ipynb  adventuregame_eval_2_3.ipynb  adventuregame_eval_3.ipynb  clem_log_adv_extract.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt
.github/workflows/: ci.yml
adventuregame/: README.md  adv_util.py  clingo_adventure_solve_checker.py  config.json  config_loader.py  constants.py  exceptions.py  if_wrapper.py  instancegenerator.py  instances_bug_checks.py  lark_action_drop.txt  lark_action_dump.txt  lark_action_put.txt  lark_action_stir.txt  lark_action_wave.txt  master.py  master_old.py  pddl_experiments2.py  pddl_experiments3.py  pddl_experiments4.py  pddl_experiments5.py  play_adventure.py  requirements.txt  test_pddl_actions_drop_witch.txt  test_pddl_actions_dump.txt  test_pddl_actions_generic_mutable.txt  test_pddl_actions_go_minimal.txt  test_pddl_actions_look.txt  test_pddl_actions_put_limited.txt  test_pddl_actions_put_witch.txt  test_pddl_actions_read.txt  test_pddl_actions_stir.txt  test_pddl_actions_take_limited.txt  test_pddl_actions_take_witch.txt  test_pddl_actions_wave.txt  test_pddl_domain2.txt  test_pddl_domain3.txt  test_pddl_domain_events.txt  test_pddl_domain_witch.txt  test_pddl_event.txt  (+3 more)
adventuregame/config/: __init__.py  compat.py  experiments.json  experiments.py  messages.json  messages.py  runtime.json  runtime.py
adventuregame/experiments/: README.md  if_wrapper_v1.py  master_old.py  pddl_experiments.py  pddl_experiments2.py  pddl_experiments3.py  (+2 more)
docs/: INTERACTIVE_ROADMAP.md  INTERACTIVE_SUMMARY.md  PRECOMMIT_SETUP.md  adding_actions.md  architecture.md  development.md  instance_format.md  pddl_guide.md
tests/: __init__.py  conftest.py  test_config_loader.py  test_if_wrapper.py  test_instancegenerator.py  test_master.py  test_pddl_util.py
utils/: __init__.py  pddl_transformers.py  string_utils.py  validation_utils.py
(+73 files in other folders)
